<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

    <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:titleTextColor="@color/white"
             android:title="Register"
             android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:background="@color/toolbar">
    </Toolbar>

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="100dp"
               android:layout_gravity="center"
               android:src="@mipmap/ic_launcher_round">

    </ImageView>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical"
                  android:orientation="horizontal"
                  android:layout_marginTop="50dp"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:minHeight="50dp">

        <ImageView android:layout_height="wrap_content"
                   android:layout_width="wrap_content"
                   android:src="@drawable/ic_baseline_account_box_24"
        />
        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:hint="Please enter username"
                android:textSize="14sp">

        </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:minHeight="50dp">

        <ImageView android:layout_height="wrap_content"
                   android:layout_width="wrap_content"
                   android:src="@drawable/ic_baseline_account_box_24"
        />
        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:hint="Please enter password"
                android:textSize="14sp">

        </EditText>
    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical"
                  android:orientation="horizontal"
                  android:layout_marginTop="50dp"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:minHeight="50dp">
        <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Champaign"/>

        <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chicago"/>

        <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New York"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:minHeight="50dp">        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Los Angeles"/>
        <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="San Fransisco"/></LinearLayout>

    <!-- RadioGroup for theme selection -->
    <RadioGroup
            android:id="@+id/themeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        <RadioButton
                android:id="@+id/theme1RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme 1"/>

        <RadioButton
                android:id="@+id/theme2RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme 2"/>

        <RadioButton
                android:id="@+id/theme3RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme 3"/>
    </RadioGroup>

    <Button
            android:id="@+id/register"
            android:layout_margin="16dp"
            android:text="Register"
            android:height="50dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="match_parent" android:layout_height="wrap_content">

    </Button>

</LinearLayout>