...
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="List of Locations"/>

        <LinearLayout
                android:id="@+id/cityButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <!-- City buttons will be added here dynamically -->
...
        <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="156dp"/>

        <Button
                android:id="@+id/buttonAddLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add a location"/>


        <Button
                android:id="@+id/logoutButton"
                android:text="Logout"
                android:height="50dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:onClick="logoutButtonClicked" tools:ignore="OnClick">

...
