<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapActivity" android:orientation="vertical">
    <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:titleTextColor="@color/white"
            android:title="Map"
            android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:background="@color/toolbar">
    </Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp" tools:ignore="WebViewLayout">

        <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        <TextView
                android:id="@+id/cityInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        <WebView
                android:id="@+id/mapWebView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        <!-- Add an id for the SupportMapFragment -->
        <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
